# SDL2_C

./: .gitignore  README.md
1-MovingPoint/src/: events.c  game.c  player.c
10-BetterRayCasting/: CMakeLists.txt
10-BetterRayCasting/maps/: 1
10-BetterRayCasting/src/: game.c  player.c
10-BetterRayCasting/src/include/: game.h
11-MouseRotation/: CMakeLists.txt
11-MouseRotation/maps/: 1  mapeditor  mapeditor.c
11-MouseRotation/src/: events.c  map.c  player.c  rays.c
12-TextureRaycasting/: CMakeLists.txt  updatecmake.sh
12-TextureRaycasting/maps/: begin  mapeditor  mapeditor.c  mapstorage  second
12-TextureRaycasting/src/: events.c  game.c  map.c  player.c  rays.c  window.c
12-TextureRaycasting/textures/: texturestorage
2-RandomColors/: Makefile
2-RandomColors/src/: colors.c  events.c  game.c  window.c
3-TurningAround/: Makefile
3-TurningAround/src/: events.c  game.c  player.c
4-MapRendering/: Makefile  build
4-MapRendering/maps/: first  mapeditor.c
4-MapRendering/src/: events.c  game.c  map.c  player.c
5-SimplePlayerColision/: CMakeLists.txt
5-SimplePlayerColision/maps/: 1  2
5-SimplePlayerColision/src/: events.c  game.c  map.c  player.c  window.c
6-KeyboardStates/maps/: 3  mapeditor  mapeditor.c
6-KeyboardStates/src/: events.c  game.c  map.c  player.c
7-FovAdjust/: CMakeLists.txt
7-FovAdjust/maps/: 1
7-FovAdjust/src/: game.c  map.c  player.c  rays.c  window.c
8-BadRaycasting/: CMakeLists.txt
8-BadRaycasting/maps/: 1
8-BadRaycasting/src/: game.c  player.c  rays.c
9-Fake3D/: CMakeLists.txt
9-Fake3D/maps/: 1  (+2 more)
(+12 files in other folders)
